INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(GX_EDITOR_SRC_DIR ${CMAKE_SOURCE_DIR}/editor)

ADD_SUBDIRECTORY(ui)

SET(GX_EDITOR_SRC
        ${GX_EDITOR_UI_SRC}
        ${GX_EDITOR_SRC_DIR}/gx-editor-main.cpp)

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Android")
    ADD_EXECUTABLE(GearoenixEditor ${GEAROENIX_EXE_TARGET} ${GX_EDITOR_SRC})
    GX_ENGINE_PREPARE_TARGET(GearoenixEditor)
ELSEIF (GX_ENABLE_EDITOR)
    ADD_LIBRARY(main SHARED ${GX_EDITOR_SRC})
    GX_ENGINE_PREPARE_TARGET(main)
ENDIF ()