SET(GX_EXAMPLES_SRC_DIR ${CMAKE_SOURCE_DIR}/examples)
SET(GX_EXAMPLES_SRC_DIR ${GX_EXAMPLES_SRC_DIR} PARENT_SCOPE)


ADD_SUBDIRECTORY(000-hello-world)
ADD_SUBDIRECTORY(001-empty-window)
ADD_SUBDIRECTORY(002-hello-triangle)
ADD_SUBDIRECTORY(003-hello-texture)
ADD_SUBDIRECTORY(004-hello-ecs)
ADD_SUBDIRECTORY(005-hello-imgui)
ADD_SUBDIRECTORY(006-hello-gltf)
ADD_SUBDIRECTORY(007-hello-skybox)