set(GX_EXAMPLES_SRC_DIR ${CMAKE_SOURCE_DIR}/examples)
set(GX_EXAMPLES_SRC_DIR ${GX_EXAMPLES_SRC_DIR} PARENT_SCOPE)


add_subdirectory(000-hello-world)
add_subdirectory(001-empty-window)
add_subdirectory(002-hello-triangle)
add_subdirectory(003-hello-texture)
add_subdirectory(004-hello-ecs)
add_subdirectory(005-hello-imgui)
add_subdirectory(006-hello-gltf)
add_subdirectory(007-hello-skybox)
add_subdirectory(008-reflection-probe)
add_subdirectory(009-baked-reflection-probe)
add_subdirectory(010-lighting)
add_subdirectory(011-animation)