set(GX_EXAMPLES_SRC_DIR ${CMAKE_SOURCE_DIR}/examples)
set(GX_EXAMPLES_SRC_DIR ${GX_EXAMPLES_SRC_DIR} PARENT_SCOPE)

add_subdirectory(001-hello-triangle)
add_subdirectory(002-hello-texture)
add_subdirectory(003-hello-ecs)
add_subdirectory(004-hello-imgui)
add_subdirectory(005-hello-gltf)
add_subdirectory(006-hello-skybox)
add_subdirectory(007-reflection-probe)
add_subdirectory(008-baked-reflection-probe)
add_subdirectory(009-lighting)
add_subdirectory(010-animation)