INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(GX_SRC_DIR ${GX_EXAMPLES_SRC_DIR}/000-empty-window)

SET(GX_SRC ${GX_SRC_DIR}/gx-ex-000-main.cpp)

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Android")
    ADD_EXECUTABLE(GearoenixExample000EmptyWindow ${GEAROENIX_EXE_TARGET} ${GX_SRC})
    TARGET_LINK_LIBRARIES(GearoenixExample000EmptyWindow GearoenixGameEngine)
ELSEIF (GX_ENABLE_EXAMPLE_000_EMPTY_WINDOW)
    ADD_LIBRARY(main SHARED ${GX_SRC})
    TARGET_LINK_LIBRARIES(main GearoenixGameEngine)
ENDIF ()