INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(GX_SRC_DIR ${GX_EXAMPLES_SRC_DIR}/000-hello-world)

SET(GX_SRC ${GX_SRC_DIR}/gx-ex-000-main.cpp)

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Android")
    ADD_EXECUTABLE(GearoenixExample000HelloWorld ${GEAROENIX_EXE_TARGET} ${GX_SRC})
    GX_ENGINE_PREPARE_TARGET(GearoenixExample000HelloWorld)
ELSEIF (GX_ENABLE_EXAMPLE_000_HELLO_WORLD)
    ADD_LIBRARY(main SHARED ${GX_SRC})
    GX_ENGINE_PREPARE_TARGET(main)
ENDIF ()