INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(GX_SRC_DIR ${GX_EXAMPLES_SRC_DIR}/001-empty-window)

SET(GX_SRC ${GX_SRC_DIR}/gx-ex-001-main.cpp)

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Android")
    ADD_EXECUTABLE(GearoenixExample001EmptyWindow ${GEAROENIX_EXE_TARGET} ${GX_SRC})
    TARGET_LINK_LIBRARIES(GearoenixExample001EmptyWindow GearoenixGameEngine)
ELSEIF (GX_ENABLE_EXAMPLE_001_EMPTY_WINDOW)
    ADD_LIBRARY(main SHARED ${GX_SRC})
    TARGET_LINK_LIBRARIES(main GearoenixGameEngine)
ENDIF ()