INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(GX_SRC_DIR ${GX_EXAMPLES_SRC_DIR}/003-hello-texture)

SET(GX_SRC ${GX_SRC_DIR}/gx-ex-003-main.cpp)

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Android")
    ADD_EXECUTABLE(GearoenixExample003HelloTexture ${GEAROENIX_EXE_TARGET} ${GX_SRC})
    GX_ENGINE_PREPARE_TARGET(GearoenixExample003HelloTexture)
ELSEIF (GX_ENABLE_EXAMPLE_003_HELLO_TEXTURE)
    ADD_LIBRARY(main SHARED ${GX_SRC})
    GX_ENGINE_PREPARE_TARGET(main)
ENDIF ()