INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(GX_SRC_DIR ${GX_EXAMPLES_SRC_DIR}/005-hello-imgui)

SET(GX_SRC ${GX_SRC_DIR}/gx-ex-005-main.cpp)

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Android")
    ADD_EXECUTABLE(GearoenixExample005HelloImGui ${GEAROENIX_EXE_TARGET} ${GX_SRC})
    TARGET_LINK_LIBRARIES(GearoenixExample005HelloImGui GearoenixGameEngine)
ELSEIF (GX_ENABLE_EXAMPLE_005_HELLO_IMGUI)
    ADD_LIBRARY(main SHARED ${GX_SRC})
    TARGET_LINK_LIBRARIES(main GearoenixGameEngine)
ENDIF ()