INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(GX_SRC_DIR ${GX_EXAMPLES_SRC_DIR}/006-hello-gltf)

SET(GX_SRC ${GX_SRC_DIR}/gx-ex-006-main.cpp)

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Android")
    ADD_EXECUTABLE(GearoenixExample006HelloGltf ${GEAROENIX_EXE_TARGET} ${GX_SRC})
    GX_ENGINE_PREPARE_TARGET(GearoenixExample006HelloGltf)
ELSEIF (GX_ENABLE_EXAMPLE_006_HELLO_GLTF)
    ADD_LIBRARY(main SHARED ${GX_SRC})
    GX_ENGINE_PREPARE_TARGET(main)
ENDIF ()