INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(GX_SRC_DIR ${GX_EXAMPLES_SRC_DIR}/009-baked-reflection-probe)

SET(GX_SRC ${GX_SRC_DIR}/gx-ex-009-main.cpp)

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Android")
    ADD_EXECUTABLE(GearoenixExample009BakedReflectionProbe ${GEAROENIX_EXE_TARGET} ${GX_SRC})
    GX_ENGINE_PREPARE_TARGET(GearoenixExample009BakedReflectionProbe)
ELSEIF (GX_ENABLE_EXAMPLE_009_BAKED_REFLECTION_PROBE)
    ADD_LIBRARY(main SHARED ${GX_SRC})
    GX_ENGINE_PREPARE_TARGET(main)
ENDIF ()