INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(GX_SRC_DIR ${GX_EXAMPLES_SRC_DIR}/011-animation)

SET(GX_SRC ${GX_SRC_DIR}/gx-ex-011-main.cpp)

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Android")
    ADD_EXECUTABLE(GearoenixExample011Animation ${GEAROENIX_EXE_TARGET} ${GX_SRC})
    GX_ENGINE_PREPARE_TARGET(GearoenixExample011Animation)
ELSEIF (GX_ENABLE_EXAMPLE_011_ANIMATION)
    ADD_LIBRARY(main SHARED ${GX_SRC})
    GX_ENGINE_PREPARE_TARGET(main)
ENDIF ()