SET(GX_ENGINE_PLATFORM_SRC_DIR ${GX_ENGINE_SRC_DIR}/platform)

ADD_SUBDIRECTORY(macos)

SET(GX_ENGINE_PLATFORM_SRC
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-and-application.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-and-application.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-and-google-play-billing.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-and-google-play-billing.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-and-jni.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-and-jni.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-and-key.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-and-key.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-and-log.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-gl-context.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/android/gx-plt-gl-context.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/billing/gx-plt-bll-billing.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/billing/gx-plt-bll-billing.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/billing/gx-plt-bll-build-configuration.hpp
        ${GX_ENGINE_PLATFORM_MACOS_SRC}
        ${GX_ENGINE_PLATFORM_SRC_DIR}/macro/gx-plt-mcr-disable-warnings.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/macro/gx-plt-mcr-enable-warnings.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/sdl2/gx-plt-sdl2-application.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/sdl2/gx-plt-sdl2-application.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/sdl2/gx-plt-sdl2-key.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/sdl2/gx-plt-sdl2-key.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/sdl2/gx-plt-sdl2-log.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/sdl2/gx-plt-sdl2-main-entry.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/stream/gx-plt-stm-asset.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/stream/gx-plt-stm-asset.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/stream/gx-plt-stm-local.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/stream/gx-plt-stm-local.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/stream/gx-plt-stm-memory.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/stream/gx-plt-stm-memory.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/stream/gx-plt-stm-path.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/stream/gx-plt-stm-path.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/stream/gx-plt-stm-stream.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/stream/gx-plt-stm-stream.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/win32/gx-plt-win-application.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/win32/gx-plt-win-application.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/win32/gx-plt-win-key.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/win32/gx-plt-win-key.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/win32/gx-plt-win-log.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/win32/gx-plt-win-main-entry.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/x11/gx-plt-x11-application.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/x11/gx-plt-x11-application.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/x11/gx-plt-x11-key.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/x11/gx-plt-x11-key.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/x11/gx-plt-x11-log.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-application.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-application.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-arguments.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-arguments.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-build-configuration.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-key.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-key.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-library.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-library.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-log.cpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-log.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-main-entry.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-runtime-configuration.hpp
        ${GX_ENGINE_PLATFORM_SRC_DIR}/gx-plt-touch.hpp
        PARENT_SCOPE)